feat: add Book write endpoints
