# backend/app/Http/Requests/Book/StoreRequest.php
@@ -1,0 +1,39 @@
+<?php
+
+namespace App\Http\Requests\Book;
+
+use App\Models\Book;
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rule;
+
+class StoreRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, list<string|Rule>>
+     */
+    public function rules(): array
+    {
+        return [
+            'title' => ['required', 'string', 'max:255'],
+            'author' => ['required', 'string', 'max:255'],
+            'isbn' => [
+                'required',
+                'string',
+                'max:13',
+                'regex:'.Book::ISBN_REGEX,
+                Rule::unique(Book::class),
+            ],
+            'published_year' => ['required', 'integer', 'between:1450,'.now()->year],
+        ];
+    }
+}
